# backend/controllers/users.js
@@ -2,7 +2,7 @@ const mongodb = require('../DB/connect');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
-  const result = await mongodb.getDb().db('exercise-tracker').collection('exercises').find();
+  const result = await mongodb.getDb().db('exercise-tracker').collection('users').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
@@ -11,7 +11,7 @@ const getAll = async (req, res) => {
 
 const getSingle = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db('exercise-tracker').collection('exercises').find({
+  const result = await mongodb.getDb().db('exercise-tracker').collection('users').find({
     _id: userId
   });
   result.toArray().then((lists) => {
@@ -21,18 +21,16 @@ const getSingle = async (req, res) => {
 };
 
 const createEntry = async (req, res) => {
-  const [month, day, year] = req.body.Date.split("/")
-  const exerciseDate = new Date(`${year}-${month}-${day}`);
-  const formattedDate = exerciseDate.toISOString();
-
-  const exercise = {
+  const user = {
     Name: req.body.Name,
-    Repetitions: req.body.Repetitions,
-    TimeSpend: req.body.TimeSpend,
-    Place: req.body.Place,
-    Date: formattedDate
+    LastName: req.body.LastName,
+    Age: req.body.Age,
+    Phone: req.body.Phone,
+    Email: req.body.Email,
+    CreatedAt: new Date().toISOString(),
+    Photo: req.body.Photo,
   };
-  const response = await mongodb.getDb().db('exercise-tracker').collection('exercises').insertOne(exercise);
+  const response = await mongodb.getDb().db('exercise-tracker').collection('users').insertOne(user);
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
@@ -41,25 +39,24 @@ const createEntry = async (req, res) => {
 };
 
 const updateEntry = async (req, res) => {
-  const [month, day, year] = req.body.Date.split("/")
-  const exerciseDate = new Date(`${year}-${month}-${day}`);
-  const formattedDate = exerciseDate.toISOString();
-  const exerciseId = new ObjectId(req.params.id);
+  const userId = new ObjectId(req.params.id);
   // be aware of updateOne if you only want to update specific fields
-  const exercise = {
+  const user = {
     Name: req.body.Name,
-    Repetitions: req.body.Repetitions,
-    TimeSpend: req.body.TimeSpend,
-    Place: req.body.Place,
-    Date: formattedDate
+    LastName: req.body.LastName,
+    Age: req.body.Age,
+    Phone: req.body.Phone,
+    Email: req.body.Email,
+    CreatedAt: new Date().toISOString(),
+    Photo: req.body.Photo,
   };
   const response = await mongodb
     .getDb()
     .db('exercise-tracker')
-    .collection('exercises')
+    .collection('users')
     .replaceOne({
-      _id: exerciseId
-    }, exercise);
+      _id: userId
+    }, user);
   console.log(response);
   if (response.modifiedCount > 0) {
     res.status(204).send();
@@ -70,7 +67,7 @@ const updateEntry = async (req, res) => {
 
 const deleteEntry = async (req, res) => {
   const userId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db('exercise-tracker').collection('exercises').deleteOne({
+  const response = await mongodb.getDb().db('exercise-tracker').collection('users').deleteOne({
     _id: userId
   }, true);
   console.log(response);
