# backend/server.js
@@ -13,7 +13,36 @@ app
     res.setHeader('Access-Control-Allow-Origin', '*');
     next();
   })
+
+  const { auth } = require('express-openid-connect');
+
+const config = {
+  authRequired: false,
+  auth0Logout: true,
+  secret: 'a long, randomly-generated string stored in env',
+  baseURL: 'http://localhost:8080',
+  clientID: '0nJZze2GXv9kr5WeOHVmqe6PqrtFttjn',
+  issuerBaseURL: 'https://dev-n7fxs16dbdbppjpg.us.auth0.com'
+};
+
+// auth router attaches /login, /logout, and /callback routes to the baseURL
+app.use(auth(config));
+
+const { requiresAuth } = require('express-openid-connect');
+
+app.get('/profile', requiresAuth(), (req, res) => {
+  res.send(JSON.stringify(req.oidc.user));
+});
+
+
+// req.isAuthenticated is provided from the auth router
+app.get('/', (req, res) => {
+  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+})
+
+  
   .use('/exercises', require('./routes/entries.js'))
+  .use('/users',requiresAuth(),require('./routes/user-routes.js'))
   .use('/api-docs', swaggerUi.serve)
   .get('/api-docs', swaggerUi.setup(swaggerDocument));
   
